test/sema/typeck/for/iterator-missing-item.out
error: Missing associated type `Item`.
--> iterator-missing-item.dora:2:1 - 4:2
1 error found.
