test/sema/typeck/for/iterator-missing-item.dora
class Foo
impl std::traits::Iterator for Foo {
    fn next(): Option[Int] { None }
}

fn f(x: Foo): Int {
    for i in x {
        return i;
    }
    0
}
